# uwlmicroservices

./: Project Report Template(2).docx  README.md  docker-compose.yml  ms.drawio
apigw/: Cargo.toml  Dockerfile  build.rs
apigw/proto/: properties.proto  users.proto
apigw/src/: errors.rs  grpc_routes.rs  main.rs  merg_serv.rs  mware.rs  rest_routes.rs
axumgateway/: Cargo.toml  build.rs
axumgateway/proto/: payments.proto
axumgateway/src/: main.rs
clientweb/: nginx.conf
clientweb/components/: Footer.tsx
clientweb/components/mainpage/: Herosection.tsx
clientweb/css/: index.css
clientweb/pages/: Home.tsx
clientweb/src/: index.tsx
dbfrontend/: Cargo.toml
dbfrontend/src/: main.rs
grpctestclient/: Cargo.toml
grpctestclient/src/: main.rs
prometheus-config/: prometheus.yml
protos/: staffusers.proto
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: main.rs
staffuserms/: Cargo.toml
staffuserms/src/: main.rs
staffweb/: Dockerfile  ecosystem.config.js  package-lock.json  package.json
staffweb/components/: Nav.tsx  Navpage.tsx
staffweb/components/mainpage/: Herosection.tsx
staffweb/scripts/: protogen.sh
staffweb/src/: App.tsx  api.tsx
userservice/: Cargo.toml  Dockerfile  bun.lockb  history.txt  package.json
userservice/src/: errors.rs  index.ts  main.rs  mware.rs  users.rs
usersgrpcclient/: Cargo.toml  build.rs
usersgrpcclient/proto/: users.proto
usersgrpcclient/src/: main.rs
usersgrpcserver/: Cargo.toml
usersgrpcserver/src/: main.rs
