[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["server", "runtime", "http1", "http2"] }
tokio = { version = "1.33.0", features = ["full"] }
hyper-tls = "0.5.0"
serde = "1.0.189"
serde_json = "1.0.107"
jsonwebtoken = "9.0.0"
arc-swap = "1.6.0"