[package]
name = "staffuserms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2", features = ["csr"] }
tonic-web-wasm-client = "0.5.0"
tonic = "0.10.2"
prost = "0.12.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }


[build-dependencies]
tonic-build = "0.10.2"