[package]
name = "userservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
axum = { version = "0.6.20", features = ["headers"]}
axum-macros = "0.3.8"
http = "0.2.9"
tower-http = { version = "0.4.4", features = ["cors"] }
tower-cookies = "0.9.0"


surrealdb = "1.0.0"
jsonwebtoken = "9.1.0"

serde_json = "1.0.107"
dotenv = "0.15.0"
serde = "1.0.189"
chrono = { version = "0.4.31", features = ["serde"] }
argon2 = "0.5.2"
uuid = { version = "1.5.0", features = ["v5", "serde"] }
lettre = "0.11.0"
sqlx = {version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "time", "chrono", "uuid", "bigdecimal"] }
tower-service = "0.3.2"
hyper = { version = "0.14.27", features = ["full"] }